<resources>
    <string name="app_name">Jigsaw</string>
    <!--LauncherActivity-->
    <string name="launcherActivity_email">Email</string>
    <string name="launcherActivity_password">Password</string>
    <string name="launcherActivity_log_in">Log In</string>
    <string name="launcherActivity_log_up">Log Up</string>
    <string name="bottom_menu_current_workout">Current Workout</string>
    <string name="bottom_menu_workout_log">Workout Log</string>
    <string name="bottom_menu_progress">Progress</string>
    <string name="bottom_menu_routine">Routines</string>
    <string name="routines_top_message">Your Routines</string>
    <string name="fab_add_routine">Add a routine</string>
    <string name="fab_add_exercise">Add an exercise</string>
    <string name="drawer_home_title">Home</string>
    <string name="drawer_current_workout_title">Current Workout</string>
    <string name="drawer_programs_title">Programs</string>
    <string name="drawer_plan_title">Plan</string>
    <string name="drawer_progress_title">Progress</string>
    <string name="drawer_history_title">History</string>

    <string-array name="muscle_groups_array">
        <item>@string/muscle_group_abs</item>
        <item>@string/muscle_group_back</item>
        <item>@string/muscle_group_biceps</item>
        <item>@string/muscle_group_calves</item>
        <item>@string/muscle_group_cardio</item>
        <item>@string/muscle_group_chest</item>
        <item>@string/muscle_group_forearms</item>
        <item>@string/muscle_group_legs</item>
        <item>@string/muscle_group_shoulders</item>
        <item>@string/muscle_group_triceps</item>
    </string-array>

    <string name="muscle_group_all_muscles">All Muscle Groups</string>
    <string name="muscle_group_abs">Abs</string>
    <string name="muscle_group_back">Back</string>
    <string name="muscle_group_biceps">Biceps</string>
    <string name="muscle_group_calves">Calves</string>
    <string name="muscle_group_cardio">Cardio</string>
    <string name="muscle_group_chest">Chest</string>
    <string name="muscle_group_forearms">Forearms</string>
    <string name="muscle_group_legs">Legs</string>
    <string name="muscle_group_shoulders">Shoulders</string>
    <string name="muscle_group_triceps">Triceps</string>

    <string name="all_muscle_groups">All Muscle Groups</string>




    <string-array name="array_training_types">
        <item>@string/array_training_types_resistance_training</item>
        <item>@string/array_training_types_cardio</item>
        <item>@string/array_training_types_flexibility</item>
        <item>@string/array_training_types_other</item>
    </string-array>

    <string name="array_training_types_resistance_training">Resistance Training</string>
    <string name="array_training_types_cardio">Cardio And Conditioning</string>
    <string name="array_training_types_flexibility">Flexibility And Mobility</string>
    <string name="array_training_types_other">Other</string>

    <string-array name="array_split_types">
        <item>@string/array_split_types_full_body</item>
        <item>@string/array_split_types_upper_lower</item>
        <item>@string/array_split_types_ppl</item>
        <item>@string/array_split_types_bro</item>
        <item>@string/array_split_types_other</item>
    </string-array>

    <string name="array_split_types_full_body">Full Body</string>
    <string name="array_split_types_upper_lower">Upper-Lower</string>
    <string name="array_split_types_ppl">Push Pull Legs (PPL)</string>
    <string name="array_split_types_bro">Bro Split</string>
    <string name="array_split_types_other">Other</string>

    <string name="variable">Variable</string>

    <string-array name="array_program_length">
        <item>@string/array_program_length_weekly</item>
        <item>@string/array_program_length_monthly</item>
        <item>@string/array_program_length_custom</item>

    </string-array>

    <string name="array_program_length_weekly">Weekly</string>
    <string name="array_program_length_monthly">Monthly</string>
    <string name="array_program_length_custom">Custom</string>

    <!--Fragments-->
    <!--CurrentWorkoutFragment-->

    <string name="current_workout_fragment_warning_text">You currently do not have an active workout. To get started, add an exercise or routine from the action button.</string>

    <string name="empty_program_name_filler">Enter a program name</string>
    <string name="empty_program_description_filler">Enter a description</string>

    <string name="bottom_navigation_menu_detailed_program_schedulde">Schedule</string>
    <string name="bottom_navigation_menu_detailed_program_workouts">Workouts</string>
    <string name="bottom_navigation_menu_detailed_program_history">History</string>

    <string name="program_set_holder_reps_textView_min_max">%1$d - %2$d reps</string>
    <plurals name="program_set_holder_reps_textView_single_value">
        <item quantity="one">%1$d rep</item>
        <item quantity="other">%1$d reps</item>
    </plurals>
    <string name="program_set_holder_reps_textView_amrap">AMRAP</string>
    <string name="program_set_holder_reps_textView_amrap_min">%1$d+ reps</string>

    <plurals name="amount_of_reps">
        <item quantity="one">Rep</item>
        <item quantity="other">Reps</item>
    </plurals>



</resources>
